# data_engineering_udacity

./: .gitignore  README.md  pyproject.toml
part_1_data_modeling/notebooks/: l1-demo-0-creating-a-table-with-postgres.ipynb  l1-demo-1-creating-a-table-with-postgres.ipynb  l1-demo-2-creating-a-table-with-apache-cassandra.ipynb  l2-demo-2-creating-denormalized-tables.ipynb  l2-demo-3-creating-fact-and-dimension-tables-with-star-schema.ipynb  l3-demo-1-2-queries-2-tables.ipynb  l3-demo-4-using-the-where-clause.ipynb  l3-exercise-1-solution-3-queries-3-tables.ipynb
part_1_data_modeling/project_1_data_modeling_postgres/: README.md  etl.ipynb  etl.py  sql_queries.py  test.ipynb
part_1_data_modeling/project_2_data_modeling_cassandra/: Project_1B_ Project_Template.ipynb  docker-compose.yml  event_datafile_new.csv
part_2/: .gitignore  aws_redshift_user
part_2/project2/: README.md  access_spakify_data.py  create_tables.py  etl.py  sql_queries.py
part_3_spark/: create_spark_cluster.sh  docker-compose.yml  docker-compose_pure_spark.yml
part_3_spark/lecture/: 2_spark_maps_and_lazy_evaluation.ipynb  3_data_inputs_and_outputs.ipynb  (+6 more)
part_4_airflow/: .gitignore  pyproject.toml
part_4_airflow/airflow/dags/: udac_dag.py  udac_example_dag.py
part_4_airflow/airflow/plugins/operators/: data_quality.py  load_dimension.py  load_fact.py  stage_redshift.py
part_5/: .gitignore  Capstone Project.ipynb  capstone_project.ipynb  config.py  config.toml  data_dictionary.md  database.py  demographics.py  docker-compose.yml  immigration.py  immigration_functions.py  temperatures.py
(+62 files in other folders)
